--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@elemaudio/core": "^2.1.0",
     "@elemaudio/web-renderer": "^2.1.0",
     "@heroicons/react": "^2.0.18",
+    "@monaco-editor/react": "^4.5.2",
     "next": "latest",
     "nextra": "^2.13.1",
     "nextra-theme-docs": "^2.13.1",
