--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@elemaudio/web-renderer": "^2.1.0",
     "@heroicons/react": "^2.0.18",
     "@monaco-editor/react": "^4.5.2",
+    "lz-string": "^1.5.0",
     "next": "latest",
     "nextra": "^2.13.1",
     "nextra-theme-docs": "^2.13.1",
